# billet

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  conanfile.py  gcovr.cfg
.jenkins/: Dockerfile  Jenkinsfile
docs/: billet-vs-fio.md  engine.md  roadmap.md  storage-driver-postgres-brief.md
docs/profiles/: README.md  adding-a-profile.md  pg_wal_commit.md  postgresql.md  random_read_4k.md
example/: README.md  smoke.sh
example/grafana/: README.md  docker-compose.yml  prometheus.yml
example/grafana/grafana/dashboards/: billet.json
example/grafana/grafana/provisioning/dashboards/: dashboards.yml
example/k8s/: README.md  SMOKE.md  billet-block-pvc.yaml  billet-job.yaml  billet-sds-tess92.yaml  collect.sh  compare-collected.sh  entrypoint.sh
include/billet/workload/: pg_wal_commit.hpp  postgresql.hpp  random_read_4k.hpp  workload.hpp
runs/local/: README.md  REPORT.html  pg-compare.html  pg-md-raid0.json  pg-md-raid1.json  pg-nvme-alt.json  pg-nvme.json  pg-ublk-raid0-hw1.json  pg-ublk-raid0-hw4.json  pg-ublk-raid1-hw1.json  pg-ublk-raid1-hw4.json
runs/tess92/: README.md  REPORT.html  baseline-pg.json  baseline-rr4k.json  compare-pg.html  compare-rr4k.html  md-raid1-pg.json  md-raid1-rr4k.json  md-raid10-pg.json  md-raid10-rr4k.json  uraid1-hw1-pg.json  uraid1-hw1-rr4k.json  uraid10-hw1-pg.json  uraid10-hw1-rr4k.json  uraid10-hw4-pg.json  uraid10-hw4-rr4k.json
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp  progress.cpp  progress.hpp
src/engine/: CMakeLists.txt  aligned_buf.cpp  aligned_buf.hpp  device_probe.cpp  device_probe.hpp  hdr.cpp  hdr.hpp  log_summary.cpp  ring_worker.hpp  sender_engine.hpp  sender_workload_ctx.hpp  topology.cpp  topology.hpp
src/report/: CMakeLists.txt  json_writer.cpp  json_writer.hpp  run_record.hpp
src/stats/: CMakeLists.txt  stats.cpp  stats.hpp
src/workload/: CMakeLists.txt  pg_wal_commit.cpp  pg_wal_commit_impl.hpp  postgresql.cpp  postgresql_impl.hpp  random_read_4k.cpp  random_read_4k_impl.hpp  scheduling.hpp
test/: CMakeLists.txt  test_async_scheduler.cpp  test_engine.cpp  test_pg_checkpointer.cpp  test_pg_reader.cpp  test_pg_wal.cpp  test_profiles.cpp  test_random_read_4k.cpp  test_report.cpp  test_topology.cpp  test_workload.cpp  test_workload_ctx.hpp
tools/: README.md  compare.py  merge_runs.py
